--- a/Registrarse.html
+++ b/Registrarse.html
@@ -199,7 +199,7 @@
         <div class="collapse navbar-collapse" id="navb">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link item_select padding_navbar" href="Home.html">Inicio</a>
+                    <a class="nav-link color_letra padding_navbar" href="Home.html">Inicio</a>
                 </li>
             </ul>
         </div>
