--- a/detalle_producto.html
+++ b/detalle_producto.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Document</title>
     <!--Boostrap4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,36 +18,6 @@
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
     <!--Importe de los iconos para las redes sociales-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#error").hide(); //ocultando el div de los errores
-
-            //Indicar que las validaciones del formulario se ejecutaran solo cuando se
-            //presione el submit
-            $("#formulario_contacto").submit(function () {
-                var mensaje = "Por favor revisar los siguientes detalles en el formulario: ";
-
-                if ($("#nombre_completo").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El nombre no debe estar vacío";
-                }
-                if ($("#correo").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El correo electrónico no debe estar vacío";
-                }
-                if ($("#asunto").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El asunto no debe estar vacío";
-                }
-                if ($("#comentario").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El comentario no debe estar vacío";
-                }
-                if (mensaje != "Por favor revisar los siguientes detalles en el formulario: ") {
-                    $("#error").html(mensaje); //mostrando el texto de la variable en el div del html
-                    $("#error").show(); //hace visible el div
-                    event.preventDefault(); //evita que los datos del formulario se envie
-                }
-            });
-        });
-    </script>
 </head>
 
 <body>
@@ -75,17 +41,20 @@
                     <a class="nav-link color_letra padding_navbar" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle color_letra padding_navbar" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle color_letra padding_navbar" href="#" id="navbardrop"
+                        data-toggle="dropdown">
                         Productos
                     </a>
                     <div class="dropdown-menu">
+
+                        <a class="dropdown-item" href="polerones.html"
+                            style="background-color: #39B6EC; color: white !important;">Polerones</a>
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
                         <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
-                        <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link item_select padding_navbar" href="contactanos.html">Contáctanos</a>
+                    <a class="nav-link color_letra padding_navbar" href="contactanos.html">Contáctanos</a>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -118,57 +87,46 @@
     </nav>
     <!--Fin Barra Menu-->
 
-    <!--Inicio Formulario-->
-    <div class="container espaciado_superior">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10" style="background-color: #fff; border: black solid 1px;">
-                <h1 style="padding-top: 10px; margin-bottom: 30px;">Comunícate con Nosotros</h1>
-                <form action="home.html" method="POST" name="formulario_contacto" id="formulario_contacto">
-                    <div class="form-group">
-                        <label for="nombre_completo">Nombre Completo</label>
-                        <input type="text" class="form-control espacios_input" name="nombre_completo"
-                            id="nombre_completo" placeholder="Ingrese su nombre">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="correo">Correo Eletrónico</label>
-                        <input type="email" class="form-control espacios_input" name="correo" id="correo"
-                            placeholder="ejemplo@ejemplo.com">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="asunto">Asunto</label>
-                        <input type="text" class="form-control espacios_input" name="asunto" id="asunto">
-                    </div>
-                    <div class="form-group">
-                        <label for="comentario">Comentarios</label>
-                        <textarea class="form-control espacios_input" id="comentario" name="comentario"
-                            rows="5"></textarea>
-                    </div>
-
-                    <div class="form-group">
-                        <div id="error" class="alert alert-danger"></div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <button type="reset" class="btn btn-primary">Limpiar Campos</button>
-                            </div>
-                        </div>
-                        <div class="col-md-6" style="text-align: right;">
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Enviar Formulario</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+    <div class="container" style="background-color: #fff; border-radius: 10px; color: #555657;">
+        <div class="row" style="margin-top: 30px; border-bottom: 1px solid #E1E8EE;">
+            <div class="col-md-12">
+                <h1 style="margin-left: 20px; margin-top: 10px;" class="titulo_det_centro">Poleron Calvin Klein</h1>
             </div>
-            <div class="col-md-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4" style="text-align: center;">
+                <img src="Imagenes/poleron1.jpg" alt="Poleron 1" class="img_detalle" style="margin-top: 10px;">
+            </div>
+            <div class="col-md-8">
+                <div class="row" style="margin-top: 10px; border-bottom: 1px solid #E1E8EE;">
+                    <div class="col-md-2">
+                        <h4>Precio</h4>
+                    </div>
+                    <div class="col-md-10">
+                        $<input type="number" readonly value="14000"
+                            style="border: 0; color: #555657; margin-top: 2px; font-size: 18px; width: 70px;">
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px;border-bottom: 1px solid #E1E8EE;">
+                    <div class="col-md-12">
+                        <h4>Descripción</h4>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #E1E8EE;">
+                    <div class="col-md-12">
+                        <h4>Cantidad</h4>
+                        <input type="number" value="1" class="form-control" style="width: 100px;">
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #E1E8EE;">
+                    <div class="col-md-12">
+                        <p><button class="comprar">Añadir al carrito</button></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
 </body>
 
 </html>
