--- a/poleras.html
+++ b/poleras.html
@@ -56,7 +56,7 @@
             </ul>
             <!--Registrarse / Iniciar Sesion-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="separacion_reg_ini padding_navbar">
+                <li class="separacion_reg_ini ">
                     <a href="Registrarse.html" class="color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
