--- a/polerones.html
+++ b/polerones.html
@@ -42,7 +42,8 @@
                     <a class="nav-link color_letra padding_navbar" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle item_select padding_navbar" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle item_select padding_navbar" href="#" id="navbardrop"
+                        data-toggle="dropdown">
                         Polerones
                     </a>
                     <div class="dropdown-menu">
@@ -56,7 +57,7 @@
             </ul>
             <!--Registrarse / Iniciar Sesion-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="separacion_reg_ini padding_navbar">
+                <li class="separacion_reg_ini">
                     <a href="Registrarse.html" class="color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -83,13 +84,16 @@
         </div>
     </nav>
     <!--Fin Barra Menu-->
-    
+
     <!--Buscar-->
     <form action="poleras.html" method="POST" name="buscar_polera" id="buscar_polera">
         <div class="container">
             <div class="row">
-                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto" style="margin-top: 1rem; margin-bottom: 1rem;">
-                <button class="btn btn-primary" style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;" type="submit">Buscar</button>
+                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto"
+                    style="margin-top: 1rem; margin-bottom: 1rem;">
+                <button class="btn btn-primary"
+                    style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;"
+                    type="submit">Buscar</button>
             </div>
         </div>
     </form>
@@ -100,8 +104,15 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron</h1> 
+                        <div class="texto_producto">
+                            <a href="detalle_producto.html">
+                            <img src="Imagenes/poleron1.jpg" alt="Poleron 1" class="producto" style="max-width: 397px !important;">
+                            <div class="overlay">
+                                <div class="texto">Ver Más</div>
+                            </div>
+                            </a>
+                        </div>
+                        <h1>Poleron</h1>
                         <h1>Calvin Klein</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
@@ -112,8 +123,8 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron</h1> 
+                        <img src="imagenes/poleron2.jpg" id="poleron2" alt="Poleron 2" style="width:100%">
+                        <h1>Poleron</h1>
                         <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
@@ -124,7 +135,7 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/poleron3.jpg" id="poleron3" alt="Poleron 3" style="width:100%">
                         <h1>Poleron</h1>
                         <h1>Guess</h1>
                         <p class="price">$12.000</p>
@@ -138,7 +149,7 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%">
                         <h1>Poleron</h1>
                         <h1>Tommy Hilfiger</h1>
                         <p class="price">$12.000</p>
@@ -150,8 +161,8 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron5.jpg" id="poleron5" alt="Poleron 5" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Armani</h1> 
+                        <img src="imagenes/poleron5.jpg" id="poleron5" alt="Poleron 5" style="width:100%">
+                        <h1>Poleron Armani</h1>
                         <h1>Exchange</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
@@ -162,7 +173,7 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%">
                         <h1>Poleron</h1>
                         <h1>Tommy Hilfiger</h1>
                         <p class="price">$12.000</p>
@@ -176,8 +187,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron7.jpg" id="poleron7" alt="Poleron 7" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron</h1> 
+                        <img src="imagenes/poleron7.jpg" id="poleron7" alt="Poleron 7" style="width:100%">
+                        <h1>Poleron</h1>
                         <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
@@ -188,7 +199,7 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron8.jpg" id="poleron8" alt="Poleron 8" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/poleron8.jpg" id="poleron8" alt="Poleron 8" style="width:100%">
                         <h1>Poleron</h1>
                         <h1>Guess</h1>
                         <p class="price">$12.000</p>
@@ -200,8 +211,8 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/poleron9.jpg" id="poleron9" alt="Poleron 9" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron</h1> 
+                        <img src="imagenes/poleron9.jpg" id="poleron9" alt="Poleron 9" style="width:100%">
+                        <h1>Poleron</h1>
                         <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
@@ -267,4 +278,5 @@
     </footer>
     <!--Fin Pie de Página-->
 </body>
+
 </html>
