--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,7 @@
             </ul>
             <!--Registrarse / Iniciar Sesion-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="separacion_reg_ini padding_navbar">
+                <li class="separacion_reg_ini">
                     <a href="Registrarse.html" class="color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -67,7 +67,7 @@
                         Registrarse
                     </a>
                 </li>
-                <li class="separacion_reg_ini bottom_ini padding_navbar">
+                <li class="separacion_reg_ini bottom_ini">
                     <a href="inicio_sesion.html" class=" color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
