Carrito de Compras

--- a/detalle_producto.html
+++ b/detalle_producto.html
@@ -103,8 +103,7 @@
                         <h4>Precio</h4>
                     </div>
                     <div class="col-md-10">
-                        $<input type="number" readonly value="14000"
-                            style="border: 0; color: #555657; margin-top: 2px; font-size: 18px; width: 70px;">
+                        <p class="texto_detalle" style="margin-bottom: 0; font-size: 20px;">$14.000</p>
                     </div>
                 </div>
                 <div class="row" style="margin-top: 10px;border-bottom: 1px solid #E1E8EE;">
