--- a/carrito.html
+++ b/carrito.html
@@ -84,36 +84,142 @@
     </nav>
     <!--Fin Barra Menu-->
 
-    <div class="shopping-cart">
-        <!-- Title -->
-        <div class="title">
-            Carrito de Compras
+    <div class="container fondo_carrito">
+        <div class="row" style="margin-top: 30px; border-bottom: 1px solid #dee2e6;">
+            <div class="col-md-12">
+                <h2 style="margin-top: 10px;">Carrito de Compras</h2>
+            </div>
         </div>
-
-        <!-- Product #1 -->
-        <div class="item">
-            <div class="buttons">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                </svg>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th style="width: 170px;">Imagen</th>
+                            <th>Nombre Producto</th>
+                            <th>Cantidad</th>
+                            <th>Precio Unitario</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td><img src="Imagenes/poleron1.jpg" alt="" style="width: 100%; max-width: 150px;"></td>
+                            <td>Poleron Calvin Klein</td>
+                            <td>3</td>
+                            <td>$14.000</td>
+                            <td>$42.000</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td><img src="Imagenes/polera1.jpg" alt=""  style="width: 100%; max-width: 150px;"></td>
+                            <td>Poleron Jordan</td>
+                            <td>4</td>
+                            <td>$7.500</td>
+                            <td>$30.000</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-
-            <div class="image">
-                <img src="Imagenes/poleron1.jpg" alt="" height="100" />
-            </div>
-
-            <div class="description">
-                <span>Poleron Calvin Klein</span>
-            </div>
-
-            <div class="quantity">
-                <input type="text" readonly value="1">
-            </div>
-
-            <div class="total-price">$14.000</div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6 fondo_carrito">
+                <div class="row">
+                    <div class="col-md-12" style="border-bottom: #B1B4B7 solid 2px; margin-top: 10px;">
+                        <h3>Detalle del Pago</h3>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px;">
+                    <div class="col-md-6" style="border-right: #B1B4B7 solid 2px;">
+                        <h4>Subtotal</h4>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>$60.504</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6" style="border-right: #B1B4B7 solid 2px;">
+                        <h4>Iva</h4>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>$11.496</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6" style="border-right: #B1B4B7 solid 2px;">
+                        <h4>Total a Pagar</h4>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>$72.000</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p><button class="pagar">Pagar</button></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Inicio Pie de Página-->
+    <footer class="bg-light text-center text-lg-start" style="margin-top: 50px;">
+        <div class="container-fluid p-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5 class="text-uppercase">Horarios de Atención</h5>
+
+                    <ul class="list-unstyled mb-0" style="line-height: 1;">
+                        <li>
+                            <p class="text-dark">Lunes: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Martes: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Miércoles: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Jueves: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Viernes: 10:00 a 20:00</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="text-uppercase mb-0" style="padding-bottom: 10px;">Redes Sociales</h5>
+
+                    <ul class="list-unstyled lados_pie_pag">
+                        <p>
+                            <a href="https://www.instagram.com/amon.store._/?hl=es" class="fa fa-instagram"></a>
+                            <a href="#" class="fa fa-facebook"></a>
+                        </p>
+                    </ul>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="text-uppercase">Contáctanos</h5>
+
+                    <ul class="list-unstyled mb-0" style="line-height: 1;">
+                        <li>
+                            <p>Telefono: +56 9 4998 3478</p>
+                        </li>
+                        <li>
+                            <p>Correo Electrónico: a.gonzalez3@duocuc.cl</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--Fin Pie de Página-->
 </body>
 
 </html>
