--- a/polerones.html
+++ b/polerones.html
@@ -106,17 +106,88 @@
                     <div class="card">
                         <div class="texto_producto">
                             <a href="detalle_producto.html">
-                            <img src="Imagenes/poleron1.jpg" alt="Poleron 1" class="producto" style="max-width: 397px !important;">
-                            <div class="overlay">
-                                <div class="texto">Ver Más</div>
-                            </div>
+                                <img src="Imagenes/poleron1.jpg" alt="Poleron 1" class="producto"
+                                    style="max-width: 397px !important;">
+                                <div class="overlay">
+                                    <div class="texto">Ver Más</div>
+                                </div>
                             </a>
                         </div>
                         <h1>Poleron</h1>
                         <h1>Calvin Klein</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
-                        <p><button>Añadir al carrito</button></p>
+                        <p><button onclick="document.getElementById('agregar_carrito').style.display='block'">Añadir al
+                                carrito</button></p>
+                        <div id="agregar_carrito" class="modal" style="text-align: left;">
+                            <form class="modal-content animate" action="/action_page.php" method="post">
+                                <div class="container hola">
+                                    <div class="row" style="margin-top: 30px; border-bottom: 1px solid #E1E8EE;">
+                                        <div class="col-md-12">
+                                            <h1 style="margin-left: 20px; margin-top: 10px;" class="titulo_det_centro">
+                                                Poleron Calvin Klein
+                                            </h1>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4" style="text-align: center;">
+                                            <img src="Imagenes/poleron1.jpg" alt="Poleron 1"
+                                                style="margin-top: 10px; width: 100%; max-width: 300px;">
+                                        </div>
+                                        <div class="col-md-8">
+                                            <div class="row"
+                                                style="margin-top: 10px; border-bottom: 1px solid #E1E8EE;">
+                                                <div class="col-md-3">
+                                                    <h4>Precio</h4>
+                                                </div>
+                                                <div class="col-md-9">
+                                                    $<input type="number" readonly value="14000"
+                                                        style="border: 0; color: #555657; margin-top: 2px; font-size: 18px; width: 70px;">
+                                                </div>
+                                            </div>
+                                            <div class="row" style="margin-top: 10px;border-bottom: 1px solid #E1E8EE;">
+                                                <div class="col-md-12">
+                                                    <h4>Descripción</h4>
+                                                    <p>Poleron Top Quality con estampado a serigrafia y tela prelavada
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="row"
+                                                style="margin-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #E1E8EE;">
+                                                <div class="col-md-12">
+                                                    <h4>Cantidad</h4>
+                                                    <input type="number" value="1" class="form-control"
+                                                        style="width: 100px;">
+                                                </div>
+                                            </div>
+                                            <div class="row"
+                                                style="margin-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #E1E8EE;">
+                                                <div class="col-md-12">
+                                                    <p><button class="comprar">Añadir al carrito</button></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container hola" style="background-color:#f1f1f1">
+                                    <button type="button"
+                                        onclick="document.getElementById('agregar_carrito').style.display='none'"
+                                        class="cancelbtn">Cancel</button>
+                                </div>
+                            </form>
+                        </div>
+
+                        <script>
+                            // Get the modal
+                            var modal = document.getElementById('agregar_carrito');
+
+                            // When the user clicks anywhere outside of the modal, close it
+                            window.onclick = function (event) {
+                                if (event.target == modal) {
+                                    modal.style.display = "none";
+                                }
+                            }
+                        </script>
                     </div>
                 </div>
             </div>
