--- a/polerones.html
+++ b/polerones.html
@@ -172,7 +172,7 @@
                                 <div class="container hola" style="background-color:#f1f1f1">
                                     <button type="button"
                                         onclick="document.getElementById('agregar_carrito').style.display='none'"
-                                        class="cancelbtn">Cancel</button>
+                                        class="cancelbtn">Cancelar</button>
                                 </div>
                             </form>
                         </div>
