validacion boton buscar

--- a/poleras.html
+++ b/poleras.html
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row">
                 <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto"
-                    style="margin-top: 1rem; margin-bottom: 1rem;">
+                    style="margin-top: 1rem; margin-bottom: 1rem;" required>
                 <button class="btn btn-primary"
                     style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;"
                     type="submit">Buscar</button>
