--- a/Pantalones.html
+++ b/Pantalones.html
@@ -42,7 +42,8 @@
                     <a class="nav-link color_letra padding_navbar" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle item_select padding_navbar" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle item_select padding_navbar" href="#" id="navbardrop"
+                        data-toggle="dropdown">
                         Pantalones
                     </a>
                     <div class="dropdown-menu">
@@ -83,13 +84,16 @@
         </div>
     </nav>
     <!--Fin Barra Menu-->
-    
+
     <!--Buscar-->
     <form action="poleras.html" method="POST" name="buscar_polera" id="buscar_polera">
         <div class="container">
             <div class="row">
-                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto" style="margin-top: 1rem; margin-bottom: 1rem;">
-                <button class="btn btn-primary" style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;" type="submit">Buscar</button>
+                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto"
+                    style="margin-top: 1rem; margin-bottom: 1rem;" required>
+                <button class="btn btn-primary"
+                    style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;"
+                    type="submit">Buscar</button>
             </div>
         </div>
     </form>
@@ -100,8 +104,9 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/pantalon 1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
-                        <h1>Pantalon</h1> 
+                        <img src="imagenes/pantalon 1.jpg" id="poleron1" alt="Poleron 1" style="width:100%"
+                            class="ajuste_fotos">
+                        <h1>Pantalon</h1>
                         <h1>Jordan</h1>
                         <p class="price">$20.000</p>
                         <p>Pantalon Top Quality con estampado a serigrafia y tela prelavada</p>
@@ -112,8 +117,9 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/pantalon 2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
-                        <h1>Pantalon</h1> 
+                        <img src="imagenes/pantalon 2.jpg" id="poleron2" alt="Poleron 2" style="width:100%"
+                            class="ajuste_fotos">
+                        <h1>Pantalon</h1>
                         <h1>Jordan</h1>
                         <p class="price">$20.000</p>
                         <p>Pantalon Top Quality con bordado y tela prelavada</p>
@@ -124,7 +130,8 @@
             <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/pantalon 3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/pantalon 3.jpg" id="poleron3" alt="Poleron 3" style="width:100%"
+                            class="ajuste_fotos">
                         <h1>Pantalon</h1>
                         <h1>Adidas</h1>
                         <p class="price">$20.000</p>
@@ -191,4 +198,5 @@
     </footer>
     <!--Fin Pie de Página-->
 </body>
+
 </html>
