--- a/polerones.html
+++ b/polerones.html
@@ -86,11 +86,11 @@
     <!--Fin Barra Menu-->
 
     <!--Buscar-->
-    <form action="poleras.html" method="POST" name="buscar_polera" id="buscar_polera">
+    <form action="polerones.html" method="POST" name="buscar_poleron" id="buscar_poleron">
         <div class="container">
             <div class="row">
                 <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto"
-                    style="margin-top: 1rem; margin-bottom: 1rem;">
+                    style="margin-top: 1rem; margin-bottom: 1rem;"required>
                 <button class="btn btn-primary"
                     style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;"
                     type="submit">Buscar</button>
